--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,28 @@
+pluginGroup = org.kylchik
+pluginName = Git Worktree Checkout
+pluginRepositoryUrl = https://github.com/ivandev0/GitWorktreeCheckout
+# SemVer format -> https://semver.org
+pluginVersion = 1.0.0
+
+# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+pluginSinceBuild = 222
+pluginUntilBuild = 241.*
+
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
+platformType = IC
+platformVersion = 2022.3.3
+
+# Gradle Releases -> https://github.com/gradle/gradle/releases
+gradleVersion = 8.6
+
+# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency=false
+
 # TODO temporary workaround for Kotlin 1.8.20+ (https://jb.gg/intellij-platform-kotlin-oom)
 kotlin.incremental.useClasspathSnapshot=false
+
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.configuration-cache = true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching = true
