--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ pluginRepositoryUrl = https://github.com/ivandev0/GitWorktreeCheckout
 pluginVersion = 0.1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 222
+pluginSinceBuild = 241
 pluginUntilBuild = 241.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2022.3.3
+platformVersion = 241-EAP-SNAPSHOT
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.6
