--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ pluginGroup = org.kylchik
 pluginName = Git Worktree Checkout
 pluginRepositoryUrl = https://github.com/ivandev0/GitWorktreeCheckout
 # SemVer format -> https://semver.org
-pluginVersion = 0.1.0
+pluginVersion = 0.1.1-2023.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 231
